package creational.singleton.Vote;

public enum Candidate {
    JOE_BIDEN, DONAL_TRUMP
}
